<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.farhan</groupId>
	<version>1.0.0-SNAPSHOT</version>
	<artifactId>sheepdogeclipseplugin.parent</artifactId>
	<packaging>pom</packaging>

	<properties>
		<tycho-version>4.0.13</tycho-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<platformSystemProperties></platformSystemProperties>
		<moduleProperties></moduleProperties>
		<systemProperties></systemProperties>
		<additionalTestArguments></additionalTestArguments>
	</properties>
	<modules>
		<module>sheepdogeclipseplugin</module>
		<module>sheepdogeclipseplugin.feature</module>
		<module>sheepdogeclipseplugin.repository</module>
		<module>sheepdogeclipseplugin.target</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals><goal>plugin-source</goal></goals>
					</execution>
					<execution>
						<id>feature-source</id>
						<goals><goal>feature-source</goal></goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-p2-metadata</id>
						<phase>package</phase>
						<goals><goal>p2-metadata</goal></goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>org.farhan</groupId>
							<artifactId>sheepdogeclipseplugin.target</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>macosx</os><ws>cocoa</ws><arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os><ws>win32</ws><arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os><ws>gtk</ws><arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<compilerArgument>-err:-forbidden</compilerArgument>
						<useProjectSettings>false</useProjectSettings>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<scm>
		<connection>scm:git:https://github.com/farhan5248/sheep-dog-cloud</connection>
		<tag>HEAD</tag>
	</scm>
	<distributionManagement>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-cloud</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</distributionManagement>
	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-cloud</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
		</repository>
	</repositories>
	<profiles>
		<profile>
			<id>macos</id>
			<activation><os><family>mac</family></os></activation>
			<properties>
				<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
			</properties>
		</profile>
		<profile>
			<id>jdk9-or-newer</id>
			<activation><jdk>[9,)</jdk></activation>
			<properties>
				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
			</properties>
		</profile>
	</profiles>
</project>
